--- a/ClientAppSettings.json
+++ b/ClientAppSettings.json
@@ -1,9 +1,9 @@
---Created by namesamlol in 2023-2024--
+--Created by namesamlol in 2023-2024 and Future
 --Original Owner by L8X--
---The Original Owner of L8X know as RCO on Github has been Disconnected in Nov 13, 2023 before Christmas also the file code are completely 
-gone forever it will replace with Bloxstrap its is the Best FPS on Roblox but there is a problem, there is lot of archives file codes 
-made by lots of people for stolen file codes--
---Remove the Description, If you want--
+--The Original Owner of L8X know as RCO on GitHub has been Disconnected in Nov 13, 2023 before Christmas also the file code are completely 
+gone forever it will replace with Bloxstrap from 2024 its is the Best FPS on Roblox but there is a problem, there is lot of archives file codes 
+made by lots of people for stolen file codes from RCO--
+--Also you can Remove the All the Description, If you want--
 --One more thing, Happy Christmas Everyone and Happy New Year, i guess--
 
 {
